finish linear regression

--- a/0_Outline.ipynb
+++ b/0_Outline.ipynb
@@ -94,9 +94,9 @@
     "## Machine Learning in Finance\n",
     "\n",
     "* 幾個常用的 ML 模型\n",
-    "    * Linear Regression \n",
-    "    * <a herf='http://nbviewer.ipython.org/format/slides/github/exilespacer/taichung.py/blob/master/PCA.ipynb'>Priciple Component Analysis</a>\n",
-    "    * <a href='http://nbviewer.ipython.org/format/slides/github/exilespacer/taichung.py/blob/master/HCA.ipynb#/'>Hierarchy Cluster Analysis </a>\n",
+    "    * <a fref='http://nbviewer.ipython.org/format/slides/github/exilespacer/taichung.py/blob/master/1_LinearRegression.ipynb'>Linear Regression </a>\n",
+    "    * <a herf='http://nbviewer.ipython.org/format/slides/github/exilespacer/taichung.py/blob/master/2_PCA.ipynb'>Priciple Component Analysis</a>\n",
+    "    * <a href='http://nbviewer.ipython.org/format/slides/github/exilespacer/taichung.py/blob/master/3_HCA.ipynb/'>Hierarchy Cluster Analysis </a>\n",
     "\n",
     "* 使用公開的案例作分享 "
    ]
